# Diabetes-Predictor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  basic-api.dockerfile  cloudbuild.yml  data.dvc  model-api.dockerfile  model-train.dockerfile  model_trace.json  pyproject.toml
.dvc/: config
.dvc/tmp/: lock
.github/: auto_request_review.yml
.github/workflows/: .ruff.toml  cml.yaml  dvc_pull.yaml  mypy-check.yaml  mypy_check.yaml  push_data.yaml  request_pr_review.yaml  ruff_lint.yaml  run_testing.yaml
app/: main.py
cloud-function/: main.py  requirements.txt
data/processed/: test_data.csv  test_labels.csv  train_labels.csv
docs/: Project_1_Tasks.docx  mkdocs.yaml  project_1_tasks.txt  project_2_tasks.txt  project_3_tasks.txt
docs/source/: overview.md  phase_1.md  phase_2.md  phase_3.md
mlops_team_project/models/: cli.py  xgboost_model.py
mlops_team_project/models/config/: default.yaml
mlops_team_project/models/logging/: config.py  logging.config
mlops_team_project/src/: predict.py  preprocess.py
mlops_team_project/src/model/: model.py  model_init.py
mlops_team_project/src/preprocess/: preprocess.py  preprocess_init.py
models/: xgboost_model.pkl
notebooks/: 1_modeling.html  1_modeling.ipynb
profiling/: cumtimeOutput.prof  model_trace.json
profiling/model_run/: DESKTOP-006G4SL_2108.1716676591627445500.pt.trace.json  DESKTOP-006G4SL_29772.1716677300773268300.pt.trace.json  DESKTOP-006G4SL_36916.1716675413779633900.pt.trace.json  DESKTOP-006G4SL_37812.1716675457810472500.pt.trace.json  DESKTOP-006G4SL_3908.1716676707754905200.pt.trace.json
tests/: __init__.py  test_data.py  test_model.py  test_training.py
wandb/: latest-run
wandb/run-20240521_203352-1dywirs3/: run-1dywirs3.wandb
wandb/run-20240521_203352-1dywirs3/files/: config.yaml  wandb-metadata.json
wandb/run-20240521_203542-f4e8vipt/: run-f4e8vipt.wandb
wandb/run-20240521_203542-f4e8vipt/files/: config.yaml  wandb-metadata.json
wandb/run-20240521_204121-p58jyfex/: run-p58jyfex.wandb
wandb/run-20240521_204121-p58jyfex/files/: config.yaml  requirements.txt  wandb-metadata.json  (+1 more)
wandb/run-20240521_204625-vdfnsw6k/: run-vdfnsw6k.wandb
(+5 files in other folders)
