[tool.poetry]
name = "mlops_team_project"
version = "0.1.0"
description = "MLOps spring 2024 team project"
authors = ["Matt Soria <msoria6@depaul.edu>",
            "Henry deBuchananne <hdebucha@depaul.edu>",
            "Allan Guan <aguan@depaul.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.8"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
xgboost = "^2.0.3"
hydra-core = "^1.3.2"
ruff = "^0.4.2"
mypy = "^1.10.0"
rich = "^13.3.2"
wandb = "^0.17.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
